--- a/styles/style.css
+++ b/styles/style.css
@@ -9,3 +9,9 @@
 .text-secondary {
     color: #42636c !important;
 }
+
+.detail-image {
+    height: 250px;
+    object-fit: cover;
+    width: 250px;
+}
